# artifacts/api-server/src/routes/index.ts
@@ -2,6 +2,8 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import authRouter from "./auth";
 import usersRouter from "./users";
+import rolesRouter from "./roles";
+import workersRouter from "./workers";
 import departmentsRouter from "./departments";
 import attendanceRouter from "./attendance";
 import leavesRouter from "./leaves";
@@ -14,6 +16,8 @@ const router: IRouter = Router();
 router.use(healthRouter);
 router.use(authRouter);
 router.use(usersRouter);
+router.use(rolesRouter);
+router.use(workersRouter);
 router.use(departmentsRouter);
 router.use(attendanceRouter);
 router.use(leavesRouter);
